# pimoroni-emu

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  notes.md  pyproject.toml  requirements.txt
.antigravitycli/: 540a4e36-33ca-4a35-9ccc-42a1eaffcf5d.json
.github/workflows/: ci.yml  release.yml
apps/: battery.py  hello.py  temperature.py
apps/badger/: hello_badge.py
apps/blinky/: scrolling_text.py  snake.py
apps/inky_frame/: hello_inky.py
apps/inky_impression/: hello_impression.py
apps/on_this_day/: config.py  crash.py  display_compat.py  draw.py  fetch.py  main.py
apps/presto/: birthday_countdown.py  icons.py  on_this_day.py  sensor_dashboard.py  svg_demo.py  touch_demo.py  vector_text_demo.py
apps/tufty/: button_irq_demo.py  hello_badge.py
apps/wifi_health/: __init__.py  current.py  device.py  leds.py  log.py  main.py  net.py  sampler.py  settings.py  theme.py  thresholds.py
apps/wifi_health_tufty/: README.md  __init__.py
emulator/: __init__.py  __main__.py  main.py  memory.py
emulator/devices/: __init__.py  badger2350.py  base.py  blinky2350.py  inky_frame.py  inky_impression.py  presto.py  tufty2350.py
emulator/display/: __init__.py  base.py  eink.py  led_matrix.py  tft.py
emulator/hardware/: __init__.py  buttons.py  rgb_led.py  self_test.py  sensor_panel.py  sensors.py  touch.py  tracer.py  wifi.py
emulator/mocks/: __init__.py  _msc.py  badger2040.py  badger_os.py  badgeware.py  badgeware_tufty.py  base.py  battery.py  binascii.py  blinky.py  breakout_as7262.py  breakout_as7343.py  (+53 more)
scripts/: capture_screenshots.py  smoke.sh
tests/: test_hardware_path.py  test_presto_touch_coords.py  test_tufty_badge.py
(+19 files in other folders)
